# OC_Python_P12

./: Makefile  config.py  main.py  pyproject.toml  readme.md
models/: models.py
requirements/: dev-requirements.txt  requirements.txt
scripts/: setup_db.py
